# mcp_email_reader

./: README.md  mcp_email_reader.py  pyproject.toml
