[project]
name = "mcp_email_reader"
version = "0.1.0"
description = "An MCP enabled email reader"
authors = [
  { name = "karateboss", email = "david.poole@techop.ch" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["fastmcp", "mcp", "imapclient", "cryptography"]

[project.scripts]
mcp_email_reader = "mcp_email_reader:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mcp_email_reader.py"]
